--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.13.1",
     "react-image-file-resizer": "^0.3.7",
     "react-router-dom": "^5.2.0",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "ts-md5": "^1.2.7"
   },
   "scripts": {
     "watch": "webpack --watch -d",
