backend. cart migration: from http session to mongodb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 # ===============================
-# Payments / PayPal
+# Document-based Database - MongoDB
+# ===============================
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=simple-spa-1
+
+# ===============================
+# Payments - PayPal
 # ===============================
 paypal.mode=sandbox
 paypal.client.id=AXfGi73Ciw4Qj0sgWddEmLYQG9csPufp23kkDpsWD-9qU8zOw6VE7a5FJkig_Ue4QbcS48PZhkrvP4u8
